feat: 修复AI服务集成和认证系统
主要更新：
🔧 修复前端AI服务连接问题
- 修复Vite代理配置，确保/api请求正确路由到后端
- 解决 'AI服务暂时不可用' 和 'HTTP 404' 错误
- 前端AI聊天功能现已完全正常

🛡️ 完善后端认证系统
- 修复AuthenticatedRequest接口类型不匹配问题
- 统一所有控制器的用户类型定义
- 添加getProfile API端点和认证中间件
- 解决后端编译错误

🤖 优化AI服务架构
- 集成SiliconFlow/DeepSeek-V3 AI模型
- 完善AI健康检查和聊天API
- 改进错误处理和响应格式
- 添加AI功能测试页面

🔍 增强知识图谱功能
- 新增知识图谱推理引擎
- 支持多项目知识共享
- 完善图谱可视化组件
- 添加批量操作功能

🧪 添加测试和调试工具
- 创建独立的AI功能测试页面
- 添加系统诊断脚本
- 完善开发环境配置
- 优化PM2进程管理

系统状态：
✅ 前端服务: http://localhost:5173
✅ 后端服务: http://localhost:3000
✅ ArangoDB: 认证连接正常
✅ AI服务: SiliconFlow集成正常
✅ 用户认证: 登录和令牌验证正常

--- a/乐格至效网站开发/legezhixiao/arangod-no-auth.conf
+++ b/乐格至效网站开发/legezhixiao/arangod-no-auth.conf
@@ -14,6 +14,10 @@ storage-engine = auto
 # 禁用认证
 authentication = false
 
+[general]
+# PID文件
+pid-file = /tmp/arangodb.pid
+
 # number of maximal server threads. use 0 to make arangod determine the
 # number of threads automatically, based on available CPUs
 maximal-threads = 0
