--- a/乐格至效网站开发/legezhixiao/backend/package.json
+++ b/乐格至效网站开发/legezhixiao/backend/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@types/uuid": "^10.0.0",
     "arangojs": "^10.1.2",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
