feat: 完成文件上传系统全面升级和Jasper AI集成
主要更新：

🔐 文件上传认证系统增强
- 实现完整的token过期检测和自动清理
- 添加统一的401错误处理机制
- 优化用户体验，自动跳转登录页

📄 文件解析功能完善
- 支持Word文档(.docx/.doc)格式解析
- 集成mammoth库进行Word文档处理
- 增强Markdown和HTML文件解析
- 统一MIME类型检测机制

🎨 Jasper AI创作系统
- 替换原有Cline SDK为全新Jasper AI服务
- 实现专业的创作模板系统(小说、角色、场景、对话)
- 集成多种写作风格和品牌语调
- 支持外部工具集成(维基百科、知识图谱、情感分析)

🧠 知识图谱增强
- 完善知识图谱可视化组件
- 实现D3.js力导向图布局
- 添加交互式节点探索功能
- 支持实时图谱分析和生成

⚙️ 系统优化
- 完善错误处理和用户反馈机制
- 优化TypeScript类型定义
- 增强开发调试工具
- 完善项目启动和部署脚本

🛠️ 开发工具
- 添加文件上传调试页面
- 完善开发环境启动脚本
- 增加AI Agent测试工具
- 优化PM2进程管理配置

技术栈更新：
- 后端：集成mammoth库处理Word文档
- 前端：Jasper AI服务架构，D3.js图谱可视化
- 认证：完善JWT token生命周期管理
- 文件处理：支持多格式文档解析

--- a/乐格至效网站开发/legezhixiao/package.json
+++ b/乐格至效网站开发/legezhixiao/package.json
@@ -1,12 +1,12 @@
 {
     "name": "legezhixiao",
     "version": "1.0.0",
-    "description": "乐格至效 AI小说创作平台 - 基于Copilot的智能写作助手",
+    "description": "乐格至效 AI小说创作平台 - 基于Jasper AI的智能写作助手",
     "keywords": [
         "ai",
         "novel",
         "writing",
-        "copilot",
+        "jasper",
         "react",
         "typescript"
     ],
