--- a/乐格至效网站开发/legezhixiao/backend/package.json
+++ b/乐格至效网站开发/legezhixiao/backend/package.json
@@ -39,6 +39,7 @@
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.10.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
@@ -56,7 +57,7 @@
     "@types/jest": "^29.5.8",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
-    "@types/multer": "^1.4.10",
+    "@types/multer": "^1.4.13",
     "@types/node": "^20.19.9",
     "@types/supertest": "^2.0.16",
     "@types/swagger-jsdoc": "^6.0.4",
