feat: 项目各模块功能与配置优化，修复数据库与PM2相关问题

--- a/乐格至效网站开发/legezhixiao/arangod-simple.conf
+++ b/乐格至效网站开发/legezhixiao/arangod-simple.conf
@@ -1,24 +1,26 @@
 
 [database]
-directory = /var/lib/arangodb3
+directory = ./arangodb3-data
 
 [server]
+
 endpoint = tcp://127.0.0.1:8529
 authentication = false
 statistics = false
-uid = arangodb
-gid = arangodb
+# uid = arangodb
+# gid = arangodb
+
 
 [log]
 level = info
-file = /var/log/arangodb3/arangodb3.log
+file = ./arangodb3.log
 foreground-tty = false
 
 [javascript]
 enabled = true
 startup-directory = /usr/share/arangodb3/js
 
-app-path = /var/lib/arangodb3-apps
+app-path = ./arangodb3-apps
 
 [foxx]
 enable = false
